--- a/style.css
+++ b/style.css
@@ -24,6 +24,25 @@ body {
     overflow-x: hidden;
 }
 
+[class^="leveltmp"] {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 10px 0px;
+    column-gap: 10px;
+}
+
+.temps {
+    padding: 0;
+    height: 31px;
+    background: transparent;
+    padding: 7px 10px;
+    border: 1px solid var(--primary-color);
+    box-sizing: border-box;
+    border-radius: 4px;
+    width: 110px;
+}
+
 .warlord-toggle label {
     top: 1px;
     left: 25px;
@@ -65,7 +84,7 @@ input[type="number"] {
     border-radius: 4px;
 }
 
-button, .generate-480 {
+button {
     background-color: var(--primary-color);
     color: var(
     --button-text-color);
@@ -124,8 +143,8 @@ footer div {
     top: -32px;
     right: -22px;
     cursor: pointer;
-    background: none;
-    width: max-content;
+	background: none;
+	width: max-content;
 }
 #results .items {
     margin-bottom: 10px;
@@ -225,14 +244,6 @@ footer div {
 .level-group .opacity {
     opacity: 0.5;
 }
-
-.item-mats {
-    display: none;
-}
-
-.materials p.remaining-to-use {
-    display: none;
-}
 .items h3, h4 {
     cursor: text;
 	font-size: 20px;
@@ -306,23 +317,24 @@ button.multiplier-btn {
 }
 
 .materials-list img {
-    width: 50px;
-    height: 50px;
-    /* border-radius: 50%; */
+    width: 45px;
+    min-width: 45px;
+    height: 45px;
     object-fit: scale-down;
+    box-sizing: border-box;
 }
 
 .materials-list .my-material {
     display: flex;
     flex-direction: row;
     padding-bottom: 8px;
-    column-gap: 8px;
+    column-gap: 17px;
     align-items: center;
     justify-content: space-between;
 }
 
 .materials-list .my-material > div, .templateAmountWrap {
-    max-width: 195px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -369,7 +381,6 @@ button.multiplier-btn {
 }
 
 .templateAmountWrap {
-    margin: 10px 0px;
     width: 100%;
     max-width: 100%;!;
 }
@@ -395,6 +406,14 @@ button.multiplier-btn {
 
 .missing-input {
     animation: blink-animation 3s ease-in-out infinite;
+}
+
+.item-mats {
+    display: none;
+}
+
+.materials p.remaining-to-use {
+    display: none;
 }
 
 .spinner-wrap {
