--- a/style.css
+++ b/style.css
@@ -380,12 +380,41 @@ button.multiplier-btn {
     margin-top: 10px;
     cursor: pointer;
     color: var(--primary-color);
-    text-decoration: underline;
+    font-weight: bold;
 }
 
 #advMaterials h4 {
     cursor: pointer;
     margin: 10px 0;
+}
+
+.level-select-container {
+    margin-top: 10px;
+}
+.level-select-container p{
+	margin-bottom: 5px;
+}
+
+.level-dropdown {
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+    margin-bottom: 5px;
+}
+
+.level-dropdown div {
+    padding: 5px 10px;
+    border: 1px solid #d5d5d5;
+    border-radius: 4px;
+    cursor: pointer;
+    user-select: none;
+    background: #d5d5d5;
+}
+
+.level-dropdown div.selected {
+    background: var(--primary-color);
+    color: #fff;
+    border: 1px solid var(--primary-color);
 }
 
 #generatebychoice h4 {
