--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ h4{
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-width: 70px;
+    min-width: 118px;
 }
 
 h2 {
@@ -305,7 +305,10 @@ h2 {
 .materials p.material-name {
     display: block;
     text-align: center;
-    margin: 0;
+    font-size: 14px;
+    font-style: italic;
+    color: var(--text-color);
+    margin-bottom: 0;
 }
 .materials p.season-id {
     text-align: center;
