--- a/style.css
+++ b/style.css
@@ -141,11 +141,9 @@ button.info-btn:hover {
 }
 
 .info-overlay .close-popup svg {
-    max-width: 20px;
-}
-
-.info-overlay .close-popup svg {
-    fill: var(--button-bg-hover);
+	max-width: 20px;
+	fill: var(--button-bg-hover);
+	height: 20px;
 }
 
 .info-overlay .close-popup:hover svg {
