--- a/style.css
+++ b/style.css
@@ -85,8 +85,22 @@ body {
 .items-header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     width: 100%;
+    position: relative;
+}
+.items-header button#itemsInfoBtn {
+    position: absolute;
+    right: 0;
+}
+
+.items-header button#itemsInfoBtn svg:hover {
+    transform: rotate(0deg);
+    fill: var(--button-bg-hover);
+}
+
+.items-header button#itemsInfoBtn svg {
+    fill: var(--primary-color);
 }
 
 .section-title span {
