--- a/style.css
+++ b/style.css
@@ -84,14 +84,21 @@ body {
 
 .items-header {
     display: flex;
-    align-items: center;
     justify-content: center;
     width: 100%;
     position: relative;
+    align-items: center;
+    margin-top: 8px;
+}
+.items-header h4 {
+    margin: 0;
 }
 .items-header button#itemsInfoBtn {
     position: absolute;
     right: 0;
+    height: 20px;
+    width: 20px;
+    margin: 0 6px 0 0;
 }
 
 .items-header button#itemsInfoBtn svg:hover {
