--- a/style.css
+++ b/style.css
@@ -736,6 +736,7 @@ button.multiplier-btn {
     position: absolute;
     top: -18px;
     right: -18px;
+    width: 40px;
 }
 
 .gift button.close:hover svg {
