--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ body {
     column-gap: 10px;
 }
 
+h1.calc-header {
+    color: var(--primary-color);
+    text-align: center;
+    font-size: 30px;
+}
+
 .leveltmp1 {
     margin-top: 15px;
 }
@@ -274,7 +280,7 @@ footer a:hover {
     text-decoration: underline;
 }
 footer div {
-    width: 600px;
+    width: 300px;
 }
 
 /* Tulosten tyyli */
@@ -857,9 +863,6 @@ button.multiplier-btn {
 @media (max-width: 600px) {
 	body {
 		min-height: initial;
-	}
-	footer div {
-		width: max-content;
 	}
 }
 
