--- a/style.css
+++ b/style.css
@@ -296,7 +296,7 @@ footer div {
         background: none;
         width: max-content;
 }
-#copyLink {
+#screenshotBtn {
     font-size: 14px;
     cursor: pointer;
     background: initial;
@@ -307,21 +307,21 @@ footer div {
     justify-content: center;
     align-items: center;
 }
-#results #copyLink svg {
+#results #screenshotBtn svg {
     fill: var(--primary-color);
     padding-left: 10px;
     height: 18px;
 }
-#results #copyLink svg:hover {
-	transform: rotate(0deg);
-	fill: initial;
+#results #screenshotBtn svg:hover {
+        transform: rotate(0deg);
+        fill: initial;
 }
 div#results h3 ~ #closeResults {
     margin: 0;
     top: -40px;
     right: -20px;
 }
-div#results h3 ~ #copyLink {
+div#results h3 ~ #screenshotBtn {
     top: -40px;
     right: 20px;
 }
