--- a/style.css
+++ b/style.css
@@ -824,6 +824,7 @@ button.multiplier-btn {
     display: inline-flex;
     align-items: center;
     font-size: 18px;
+    user-select: none;
 }
 
 
@@ -884,8 +885,8 @@ button.multiplier-btn {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    margin-top: 12px;
-    margin-bottom: 20px;
+    margin-top: 18px;
+    margin-bottom: 18px;
 }
 
 .season-zero-slider__input {
@@ -954,6 +955,7 @@ button.multiplier-btn {
     grid-template-columns: repeat(4, 1fr);
     font-size: 12px;
     color: #666;
+    margin-top: 3px;
 }
 
 .season-zero-slider__labels span {
