--- a/style.css
+++ b/style.css
@@ -740,6 +740,12 @@ div#results h3 ~ #closeResults {
     margin: 24px 0 10px;
 }
 
+.results-actions__group {
+    display: inline-flex;
+    align-items: center;
+    gap: 8px;
+}
+
 .results-actions__button {
     width: auto;
     min-width: 160px;
@@ -768,6 +774,10 @@ div#results h3 ~ #closeResults {
 
 .results-actions__clear:hover {
     background-color: #992f2f;
+}
+
+.results-actions__info {
+    margin-left: 0;
 }
 
 .materials {
