--- a/style.css
+++ b/style.css
@@ -744,6 +744,7 @@ div#results h3 ~ #closeResults {
     display: inline-flex;
     align-items: center;
     gap: 8px;
+    flex: 1 1 100%;
 }
 
 .results-actions__button {
@@ -757,7 +758,7 @@ div#results h3 ~ #closeResults {
 
 .results-actions__button:disabled {
     opacity: 0.75;
-    cursor: not-allowed;
+    cursor: default;
 }
 
 .results-actions__save {
@@ -777,7 +778,11 @@ div#results h3 ~ #closeResults {
 }
 
 .results-actions__info {
-    margin-left: 0;
+    margin-left: auto;
+}
+
+.results-actions__info svg:hover {
+    transform: none;
 }
 
 .materials {
